--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContentGameActivity"/>
+        <activity android:name=".ContentGameActivity">
+
+        </activity>
     </application>
 
 </manifest>
